crates/stems-tui/src/snapshots/stems_tui__logs__tests__logpane-search-merged.snap
---
source: crates/stems-tui/src/logs.rs
expression: "render(&p, 60, 10)"
---
┌ Logs: echo-svc · scrolled ───────────────────────────────┐
│   12:00:00.050 echo-svc │ line 5                         │
│   12:00:00.060 echo-svc │ line 6                         │
│   12:00:00.070 echo-svc │ line 7                         │
│   12:00:00.080 echo-svc │ line 8                         │
│   12:00:00.090 echo-svc │ line 9                         │
│ * 12:00:00.100 echo-svc │ line 10                        │
│›* 12:00:00.110 echo-svc │ line 11                        │
│ /line 1 · 3 matches · 3/3 (n/N)                          │
└──────────────────────────────────────────────────────────┘
