crates/stems-tui/src/snapshots/stems_tui__logs__tests__logpane-wrap.snap
---
source: crates/stems-tui/src/logs.rs
expression: text
---
┌ Logs: echo-svc · following · wrap ───┐
│›  12:00:00.000 xxxxxxxxxxxxxxxxxxxxxx│
│   xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx│
│   xxxxxxxxxxxxxxxxxxxxxxx            │
│                                      │
└──────────────────────────────────────┘
